// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render render Alert 1`] = `
<Fragment>
  <Alert
    centerPage={true}
    color="danger"
    textError="error"
  />
</Fragment>
`;

exports[`render render Loader 1`] = `
<Fragment>
  <Component
    centerPage={true}
  />
</Fragment>
`;

exports[`render render StyledProfileComponent 1`] = `
<Fragment>
  <StyledProfileComponent>
    <UserImage />
    <Connect(CityComponent) />
    <Connect(LanguagesComponent) />
    <Connect(SocialComponent) />
  </StyledProfileComponent>
</Fragment>
`;
